# block-game

./: .gitmodules  CMakeLists.txt  Dockerfile.build  build.sh  main.html
assets/: shader.wgsl
include/: app.h  config.h  entrypoint.h  logger.h  pipeline.h  ssbo.h  texture.h  uniform.h  webgpu.h  window.h
include/dawn/: webgpu_cpp_print.h
include/webgpu/: webgpu.h  webgpu_cpp.h
src/: CMakeLists.txt  app.cpp  config.cpp  logger.cpp  main.cpp  pipeline.cpp  texture.cpp  webgpu.cpp  window.cpp
